# gfx_json

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.agent  README.md  build.ps1  docker-compose.yml  pyproject.toml  requirements.txt
.claude/auto/: session.yaml
_backup_tests/: test_integration.py  test_sync_service.py  test_tray_app.py
dashboard/: Dockerfile  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: PCStatusCard.tsx  StatCard.tsx
dashboard/hooks/: useSyncEvents.ts
docs/: DESIGN.md  GFX-JSON-SCHEMA.md  NAS-INSTALLATION-GUIDE.md  NAS-SSH-GUIDE.md  SCHEMA_MIGRATION_GUIDE.md  gfx_supabase_sync.md  schema-analysis-report.md
docs/checklists/: FT-0011.md  NAS-REDESIGN.md
examples/: pc_registry.json
migrations/: 001_create_normalized_tables.sql  001_nas_central.sql  002_rls_policies.sql  003_aep_field_alignment.sql  004_emergency_compatibility.sql  005_add_missing_columns.sql
scripts/: test_nas_upload.py  test_nas_upload_v2.py  verify_test_env.py
src/: __init__.py
src/sync_agent/: __init__.py  batch_queue.py  config.py  file_watcher.py  local_queue.py  main.py  main_v3.py  multi_path_watcher.py  settings_dialog.py  sync_service.py  tray_app.py
supabase/migrations/: 20260119000000_sync_reliability.sql  (+2 more)
tests/: __init__.py  conftest.py  test_agent.py  test_batch_queue.py  test_file_watcher.py  test_json_parser.py  test_local_queue.py  test_offline_queue.py  test_realtime_publisher.py  test_settings.py  test_supabase_client.py  test_sync_service_v3.py  test_sync_service_v4.py  test_watcher.py
(+62 files in other folders)
